(feat) added split calculation
