# src/openapi.yaml
@@ -1,23 +1,23 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/OAI/OpenAPI-Specification/main/schemas/v3.0/schema.json
 openapi: 3.0.3
 info:
-  description: |-
-    This is API Documentation for Patungin.id
-  version: "0.1"
-  title: Patunginid - 0.1
+    description: |-
+        This is API Documentation for Patungin.id
+    version: '0.1'
+    title: Patunginid - 0.1
 
 paths:
-  /checkhealth:
-      get:
-          description: Check health api connection
-          responses:
-              200:
-                  description: Successfully returns a message
-                  content:
-                      application/json:
-                          schema:
-                              type: object
-                              properties:
+    /checkhealth:
+        get:
+            description: Check health api connection
+            responses:
+                200:
+                    description: Successfully returns a message
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
                                     success:
                                         type: boolean
                                         example: true
@@ -29,19 +29,19 @@ paths:
                                         properties:
                                             message:
                                                 type: string
-                                                example: "Negative"
+                                                example: 'Negative'
 
-  /checkhealth-db:
-      get:
-          description: Check health api db connection
-          responses:
-              200:
-                  description: Successfully returns a message
-                  content:
-                      application/json:
-                          schema:
-                              type: object
-                              properties:
+    /checkhealth-db:
+        get:
+            description: Check health api db connection
+            responses:
+                200:
+                    description: Successfully returns a message
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
                                     success:
                                         type: boolean
                                         example: true
@@ -55,20 +55,105 @@ paths:
                                                 type: number
                                                 example: 4
 
+    /api/v1/receipt/calculate:
+        post:
+            description: calculate prices and distribute it accordingly
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                users:
+                                    type: array
+                                    items:
+                                        type: string
+                                items:
+                                    type: array
+                                    items:
+                                        type: object
+                                        properties:
+                                            name:
+                                                type: string
+                                            total_price:
+                                                type: number
+                                            payee:
+                                                description: an array of index of users that pays
+                                                type: array
+                                                items:
+                                                    type: integer
+                                subtotal:
+                                    description: subtotal (sum of items price)
+                                    type: number
+                                tax_price:
+                                    type: number
+                                service_charge:
+                                    type: number
+                                other_price:
+                                    type: number
+                                discount:
+                                    type: number
+                                total_price:
+                                    type: number
+            responses:
+                200:
+                    description: Successfully distributed the prices
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    success:
+                                        type: boolean
+                                        example: true
+                                    status:
+                                        type: number
+                                        example: 200
+                                    data:
+                                        type: object
+                                        properties:
+                                            users:
+                                                type: array
+                                                items:
+                                                    type: object
+                                                    properties:
+                                                        name:
+                                                            type: string
+                                                        items:
+                                                            type: array
+                                                            items:
+                                                                type: array
+                                                                items:
+                                                                    type: object
+                                                                    properties:
+                                                                        name:
+                                                                            type: string
+                                                                        price:
+                                                                            type: number
+                                                        tax_price:
+                                                            type: number
+                                                        service_charge:
+                                                            type: number
+                                                        other_price:
+                                                            type: number
+                                                        discount:
+                                                            type: number
+                                                        total_price:
+                                                            type: number
 
 components:
+    schemas:
+        ApiResponse:
+            type: object
+            properties:
+                success:
+                    type: boolean
+                status:
+                    type: number
 
-  schemas:
-    ApiResponse:
-      type: object
-      properties:
-        success:
-          type: boolean
-        status:
-          type: number
-
-  securitySchemes:
-    api_key:
-      type: apiKey
-      name: api_key
-      in: header
+    securitySchemes:
+        api_key:
+            type: apiKey
+            name: api_key
+            in: header
